# ss

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.python  Makefile  Makefile.rust  README.md  docker-compose.yml  pyproject.toml
TP1/: Makefile  README.md
TP1/cim-implementation/: Cargo.toml  Makefile  README.md
TP1/cim-implementation/src/: cim_finder.rs  lib.rs  main.rs  neighbor_finder.rs  particles.rs  simple_finder.rs
TP1/data/: README.md  example_output.txt  generate.py  output.txt  q2.txt  q3.txt  simulation.txt
TP1/scripts/: generate.py  run_simulation.py  write_file.py
TP1/tp1/: .gitignore  Cargo.toml
TP1/tp1/src/: parser.rs  particle.rs  particles.rs
TP2/: Makefile  README.md
TP2/data/: README.md  input.txt  output.txt  simulation_runs_b.pkl
TP2/scripts/: generate.py  run_simulation.py
TP2/tp2/: Cargo.toml
TP2/tp2/src/: main.rs  parser.rs  particle.rs
TP3/: Makefile
TP3/c4/: c4.dsl
TP3/data/: README.md  input.txt  output.txt  simulation_runs.pkl  simulation_runs_speeds.pkl  simulation_runs_ys.pkl
TP3/scripts/: generate.py  run_simulation.py
TP3/tp3/: Cargo.toml
TP3/tp3/src/: lib.rs  parser.rs  particle.rs
TP4A/: Makefile
TP4A/data/: README.md  analytic.csv  beeman.csv  gear.csv  mse.csv  verlet.csv
TP4A/tp4a/: Cargo.toml
TP4A/tp4a/src/: beeman.rs  gear_predictor_corrector.rs  main.rs  verlet.rs
TP4B/: Makefile
TP4B/data/: README.md  output.txt  simulation_runs_ks.csv  simulation_runs_ys.csv
TP4B/scripts/: generate.py  run_simulation.py
TP4B/tp4b/: Cargo.toml
TP4B/tp4b/src/: gear.rs
TP5/: Makefile
TP5/data/: README.md  input.txt  simulation_a.csv  simulation_b.csv
TP5/scripts/: generate.py  run_simulation.py
TP5/tp5/: Cargo.toml
TP5/tp5/src/: lib.rs  parser.rs  particle.rs
cim-implementation/: Cargo.toml
data/: example_input.txt  generate.py
notebooks/: Untitled.ipynb  main.ipynb  plot.ipynb  tp2.ipynb  tp3.ipynb  tp4a.ipynb  tp5.ipynb
notebooks/media/Tex/: 006d5c4f57374102.dvi  006d5c4f57374102.tex  00c61a6e8298476e.dvi  0298db1a6c844301.dvi  3b7e741a76ee76a4.dvi  3d03f1e61f74f6b3.dvi  5282c4e8661dc08f.dvi  5707bd4d558c91bd.dvi  630958bbd56f8775.dvi  636fcc1c0070bb50.dvi  6fdc8994b887759a.dvi  80ddffefd27ba267.dvi  8386c3620d3a3466.dvi  c07528c17708b049.tex  ce14bce8a4b9ddee.dvi  d9294a8d6b301b15.dvi  e6189ce8b7162273.dvi
notebooks/media/videos/notebooks/720p30/partial_movie_files/WarpSquare/: partial_movie_file_list.txt
utils/capturable_visualization/: Cargo.toml
utils/capturable_visualization/src/: lib.rs
utils/cim/: Cargo.toml
utils/cim/src/: cim_finder.rs  lib.rs  neighbor_finder.rs  particles.rs  simple_finder.rs
utils/frame_capturer/: Cargo.toml
utils/frame_capturer/src/: lib.rs
utils/gear_predictor_corrector/: Cargo.toml
utils/gear_predictor_corrector/src/: lib.rs
utils/pool/: Cargo.toml
utils/pool/src/: draw.rs  lib.rs  models.rs  parser.rs
