[workspace]
resolver = "2"
members = [
    "TP1/tp1",
    "TP2/tp2",
    "TP3/tp3",
    "TP4B/tp4b",
    "utils/*",
]
[workspace.dependencies]
anyhow = "1.0.69"
cgmath = { version = "0.18.0", features = ["rand"] }
chumsky = "=1.0.0-alpha.2"
clap = { version = "4.1.8", features = ["derive"] }
itertools = "0.10.5"
nannou = { git = "https://github.com/alansartorio/nannou.git", branch = "model-closure" }
ndarray = "0.15.6"
rand = "0.8.5"
glam = "0.23.0"
nalgebra = "0.32.2"

cim = { path = "utils/cim" }
frame_capturer = { path = "utils/frame_capturer" }
capturable_visualization = { path = "utils/capturable_visualization" }
pool = { path = "utils/pool", default-features = false }
