[tool.poetry]
name = "SS"
version = "0.1.0"
description = "SS models"
authors = ["Lucas Vittor"]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12.0"
python-decouple = "^3.3"
seaborn = "^0.11.2"
matplotlib = "^3.4.3"
manim = "^0.17.0"
jupyterlab = "^3.4.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "19.10b0"
pandas = "^1.3.4"
typing-extensions = "^4.0.0"

[tool.black]
line-length = 88
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"