[tool.poetry]
name = "SS"
version = "0.1.0"
description = "SS models"
authors = ["Lucas Vittor"]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12.0"
python-decouple = "^3.3"
seaborn = "^0.11.2"
matplotlib = "^3.4.3"
jupyterlab = "^3.4.5"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"