[package]
name = "tp1"
version = "0.1.0"
edition = "2021"
default-run = "cim-implementation"

[dependencies]
anyhow = { workspace = true }
chumsky = { workspace = true }
cim = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
nannou = { workspace = true }
ndarray = { workspace = true }
nalgebra = { workspace = true }
