[package]
name = "tp2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true }
cim = { workspace = true }
frame_capturer = { workspace = true }
capturable_visualization = { workspace = true }
chumsky = { workspace = true }
clap = { workspace = true }
nannou = { workspace = true }
utf8-chars = "2.0.3"
itertools = { workspace = true }
nalgebra = { workspace = true }
