[package]
name = "tp3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true }
cim = { path = "../../utils/cim" }
frame_capturer = { path = "../../utils/frame_capturer" }
chumsky = { workspace = true }
clap = { workspace = true }
nannou = { workspace = true }
utf8-chars = "2.0.3"
itertools = { workspace = true }
nalgebra = { workspace = true }
